Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
                         <li>Upgrade installation</li>
                     </ul>
                 </div>
+                <div class="service-card">
+                    <div class="service-icon">💻</div>
+                    <h3>Additional Services</h3>
+                    <p>I also offer a variety of other services to keep your devices running smoothly and efficiently.</p>
+                    <ul class="service-list">
+                        <li>Speed up your computer</li>
+                        <li>Add storage space</li>
+                        <li>Fix or replace broken parts</li>
+                        <li>Replace screens</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
