Update hero title to include 'Local'

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Expert Tech Solutions</h1>
+                <h1 class="hero-title">Local Expert Tech Solutions</h1>
                 <p class="hero-subtitle">Professional repair, troubleshooting, and assembly services for all your technology needs</p>
                 <a href="#contact" class="cta-button">Get Started</a>
             </div>
